[tool.poetry]
name = "py-valid-proxy"
version = "0.3.0"
description = "Valid proxy server ('alive' or 'dead')"
authors = ["Suvorinov Oleg <suvorinovoleg@yandex.ru>"]
homepage="https://github.com/suvorinov/py_valid_proxy.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
geoip2 = "^4.7.0"
dataclasses-json = "^0.6.3"
rich = "^13.7.0"

[tool.poetry.scripts]
valid_proxy = "py_valid_proxy.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
